--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,27 @@
 /* ---------------------------------------------- */
 body {
-  background-color:rgba(15,15,15,.95);
-  color:white;
+background-image: url(https://cdn.hipwallpaper.com/i/5/76/ucDVfG.jpg);
+color: white;
 }
 
 header {
   text-align: center;
+  background-color: black;
+   border-radius: 50%;
+   height: 200px;
+   margin-left: 600px;
+   margin-right: 600px;
+   padding-top: 20px;
 }
-
-.aside {
-  position: absolute;
-  left:0;
-  padding:20px;
+aside {
+  display: block;
+  list-style: none;
+  background-color: black;
+  width: 150px;
+  height: auto;
+}
+li{
+  list-style: none;
 }
 
 .body {
@@ -19,8 +29,46 @@ header {
   padding:20px;
 }
 
-@media only screen and (max-width:1200px) {
+@media only screen and (max-width:1600px) {
   .body {
     margin-left: 180px;
   }
+
+.jokeGenerator {
+  display:  block;
+  text-align: center;
+  background-color: black;
+  margin-left: 200px;
+  margin-right: 200px;
+  padding-bottom:20px;
+  padding-top: 20px;
+
+}
+
+.jokeButton{
+  background-color: black;
+  color: white;
+  border-color: white;
+}
+
+.jokeButton:hover{
+  color:blue;
+}
+
+.jokesTitle{
+  display: block;
+  text-align: center;
+}
+
+form {
+  display: block;
+  text-align: center;
+}
+.joke-body{
+  font-size: 30px;
+  color: blue;
+}
+
+
+
 }
