--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ li{
   padding:20px;
 }
 
-@media only screen and (max-width:1600px) {
+@media only screen and (min-width:400px) {
   .body {
     margin-left: 180px;
   }
